# firmware-controller

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: rust.yaml
src/: lib.rs
src/controller/: item_impl.rs  item_struct.rs  mod.rs
tests/: integration.rs
