[package]
name = "firmware-controller"
description = "Controller to decouple interactions between components in a no_std environment."
version = "0.2.0"
edition = "2021"
authors = [
    "Zeeshan Ali Khan <zeenix@gmail.com>",
    "Max Grollmann <max@grollmann.com>",
]
license = "MIT"
repository = "https://github.com/layerx-world/firmware-controller/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "fold", "full"] }

[dev-dependencies]
heapless = { version = "0.7", default-features = false }
futures = { version = "0.3", default-features = false, features = [
    "async-await",
    "std",
    "executor",
] }
critical-section = { version = "1.2", features = ["std"] }
embassy-sync = "0.7.2"
embassy-executor = { version = "0.9.1", features = [
    "arch-std",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
